<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">
        <Button android:id="@+id/btn_link_login_comeback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comeBackButtonText"
            android:background="@drawable/spinnerbackground"
            android:layout_marginTop="10dp"
            android:textSize="13dp"
            android:textColor="@android:color/black"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="10dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/signup_input_email"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/signup_input_login"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/signup_input_name"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/signup_input_surname"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/surname" />

    <EditText
        android:id="@+id/sign_input_password"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:layout_weight=".28"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="1dp"
        android:background="@drawable/spinnerbackground"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/drop" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/choose_avatar_bttn"
            android:text="@string/PickPhoto"
            android:background="@color/tonnedBlue"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/avatar_status_tV"
            android:text="@string/photoNotChosen"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUuButtonText"
        android:background="@color/backgroundStartColor"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"/>
</LinearLayout>
