<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/line"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:paddingBottom="15sp">

        <TableRow
            android:id="@+id/table_row_messages"
            android:onClick="rowClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/messages"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/table_row_messages"
            android:background="#A9A9A9" />

        <TableRow
            android:id="@+id/table_row_my_actions"
            android:onClick="rowClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/myActions"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/table_row_my_actions"
            android:background="#A9A9A9" />


        <TableRow
            android:id="@+id/table_row_organisations"
            android:onClick="rowClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/organizations"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/table_row_organisations"
            android:background="#A9A9A9" />
        <TableRow
            android:id="@+id/table_row_find_actions"
            android:onClick="rowClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/findAction"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/table_row_find_actions"
            android:background="#A9A9A9" />
        <TableRow
            android:id="@+id/table_log_out"
            android:onClick="rowClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logOut"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                />
        </TableRow>




        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView android:id="@+id/scrollView"
                android:layout_column="11" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>
    </TableLayout>

</LinearLayout>